--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,7 @@
 # This file lists all individuals having contributed content to the repository.
 
-
+Hadiza Hamisu <naveera.nh@gmail.com>
+ Rahmat Kilani <rahmatbola3@gmail.com>
 Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
 Joann Vuong <130@holbertonschool.com> 
